--- a/frontend/translations/it.po
+++ b/frontend/translations/it.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "PO-Revision-Date: 2022-10-01 14:17+0000\n"
 "Last-Translator: Jacopo Lodovico Trabia <jacopo.trabia@gmail.com>\n"
-"Language-Team: Italian <https://hosted.weblate.org/projects/penpot/frontend/"
-"it/>\n"
+"Language-Team: Italian "
+"<https://hosted.weblate.org/projects/penpot/frontend/it/>\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -226,6 +226,9 @@ msgstr "Condividi i prototipi"
 msgid "common.share-link.view-all"
 msgstr "Seleziona tutto"
 
+msgid "common.unpublish"
+msgstr "Spubblica"
+
 #: src/app/main/ui/dashboard/projects.cljs
 msgid "dasboard.team-hero.management"
 msgstr "Gestisci team"
@@ -235,6 +238,10 @@ msgid "dasboard.team-hero.text"
 msgstr ""
 "Penpot è studiato per i team. Invita membri per lavorare insieme a file e "
 "progetti"
+
+#: src/app/main/ui/dashboard/projects.cljs
+msgid "dasboard.team-hero.title"
+msgstr "Fai squadra!"
 
 #: src/app/main/ui/dashboard/projects.cljs
 msgid "dasboard.tutorial-hero.info"
@@ -335,6 +342,12 @@ msgid "dashboard.export-shapes"
 msgstr "Esporta"
 
 #: src/app/main/ui/export.cljs
+msgid "dashboard.export-shapes.how-to"
+msgstr ""
+"Puoi aggiungere dei parametri di esportazione agli elementi accedendo alle "
+"proprietà del design (in fondo alla barra laterale destra)."
+
+#: src/app/main/ui/export.cljs
 msgid "dashboard.export-shapes.how-to-link"
 msgstr "Informazioni utili su come configurare l'esportazione in Penpot."
 
@@ -364,8 +377,8 @@ msgstr ""
 
 msgid "dashboard.export.options.all.message"
 msgstr ""
-"I file con librerie condivise verranno inclusi nell'esportazione, mantenendo "
-"il loro collegamento."
+"I file con librerie condivise verranno inclusi nell'esportazione, "
+"mantenendo il loro collegamento."
 
 msgid "dashboard.export.options.all.title"
 msgstr "Esporta le librerie condivise"
@@ -374,6 +387,9 @@ msgid "dashboard.export.options.detach.message"
 msgstr ""
 "Le librerie condivise non saranno incluse nell'esportazione e nessuna "
 "risorsa verrà aggiunta alla libreria. "
+
+msgid "dashboard.export.options.detach.title"
+msgstr "Considera le risorse delle librerie condivise come oggetti di base"
 
 msgid "dashboard.export.options.merge.message"
 msgstr ""
@@ -404,16 +420,16 @@ msgstr ""
 "Qualsiasi font web caricato qui verrà aggiunto alla lista dei font family "
 "disponibile nelle impostazioni testo dei file di questo team. I font che "
 "arrecano lo stesso nome di font family verranno raggruppati come un "
-"**singolo font family**. È possibile caricare font con i seguenti formati:"
-"**TTF, OTF e WOFF**(uno solo di questi è necessario)."
+"**singolo font family**. È possibile caricare font con i seguenti "
+"formati:**TTF, OTF e WOFF**(uno solo di questi è necessario)."
 
 msgid "dashboard.fonts.hero-text2"
 msgstr ""
-"È consigliabile caricare unicamente font di cui si è proprietari o dei quali "
-"si possiede la licenza d'uso in Penpot. Ulteriori informazioni sui diritti "
-"dei contenuti sono disponibili nella sezione [Termini di Servizio di Penpot]"
-"(https://penpot.app/terms.html). Potresti anche voler approfondire le "
-"[licenze per i font](https://www.typography.com/faq)."
+"È consigliabile caricare unicamente font di cui si è proprietari o dei "
+"quali si possiede la licenza d'uso in Penpot. Ulteriori informazioni sui "
+"diritti dei contenuti sono disponibili nella sezione [Termini di Servizio "
+"di Penpot](https://penpot.app/terms.html). Potresti anche voler "
+"approfondire le [licenze per i font](https://www.typography.com/faq)."
 
 #: src/app/main/ui/dashboard/fonts.cljs
 msgid "dashboard.fonts.upload-all"
@@ -637,6 +653,10 @@ msgstr "I tuoi file sono stati spostati con successo"
 msgid "dashboard.success-move-project"
 msgstr "Il tuo progetto è stato spostato con successo"
 
+#: src/app/main/ui/dashboard/sidebar.cljs
+msgid "dashboard.switch-team"
+msgstr "Cambia team"
+
 #: src/app/main/ui/dashboard/team.cljs
 msgid "dashboard.team-info"
 msgstr "Informazioni sul team"
@@ -747,8 +767,7 @@ msgid "errors.email-invalid-confirmation"
 msgstr "L'indirizzo e-mail di conferma deve corrispondere"
 
 msgid "errors.email-spam-or-permanent-bounces"
-msgstr ""
-"L'e-mail \"%s\" è stata riportata come spam o respinta in modo permanente."
+msgstr "L'e-mail \"%s\" è stata riportata come spam o respinta in modo permanente."
 
 #: src/app/main/ui/auth/verify_token.cljs,
 #: src/app/main/ui/settings/feedback.cljs, src/app/main/ui/dashboard/team.cljs
@@ -820,8 +839,7 @@ msgstr ""
 "proprietario."
 
 msgid "errors.terms-privacy-agreement-invalid"
-msgstr ""
-"È necessario accettare i termini di servizio e l'informativa sulla privacy."
+msgstr "È necessario accettare i termini di servizio e l'informativa sulla privacy."
 
 #: src/app/main/data/media.cljs,
 #: src/app/main/ui/workspace/sidebar/options/menus/exports.cljs,
@@ -874,9 +892,9 @@ msgstr "Soggetto"
 #: src/app/main/ui/settings/feedback.cljs
 msgid "feedback.subtitle"
 msgstr ""
-"Descrivi per favore il motivo della tua e-mail, specificando se si tratta di "
-"un problema, di un'idea oppure di un dubbio. Un membro del nostro team ti "
-"risponderà il prima possibile."
+"Descrivi per favore il motivo della tua e-mail, specificando se si tratta "
+"di un problema, di un'idea oppure di un dubbio. Un membro del nostro team "
+"ti risponderà il prima possibile."
 
 #: src/app/main/ui/settings/feedback.cljs
 msgid "feedback.title"
@@ -1036,6 +1054,10 @@ msgstr "Spaziatura delle lettere"
 msgid "handoff.attributes.typography.line-height"
 msgstr "Altezza Linea"
 
+#: src/app/main/ui/handoff/attributes/text.cljs
+msgid "handoff.attributes.typography.text-decoration"
+msgstr "Decorazioni testo"
+
 msgid "handoff.attributes.typography.text-decoration.none"
 msgstr "Nessuno"
 
@@ -1054,6 +1076,9 @@ msgstr "Minuscolo"
 
 msgid "handoff.attributes.typography.text-transform.none"
 msgstr "Nessuno"
+
+msgid "handoff.attributes.typography.text-transform.titlecase"
+msgstr "Prime lettere maiuscole"
 
 msgid "handoff.attributes.typography.text-transform.uppercase"
 msgstr "Maiuscolo"
@@ -1374,8 +1399,7 @@ msgstr "Sei connesso come"
 
 #: src/app/main/ui/static.cljs
 msgid "labels.not-found.desc-message"
-msgstr ""
-"Questa pagina non esiste oppure non hai i permessi necessari per accedervi."
+msgstr "Questa pagina non esiste oppure non hai i permessi necessari per accedervi."
 
 #: src/app/main/ui/static.cljs
 msgid "labels.not-found.main-message"
@@ -1598,8 +1622,8 @@ msgstr "Verificare il nuovo indirizzo e-mail"
 #: src/app/main/ui/settings/change_email.cljs
 msgid "modals.change-email.info"
 msgstr ""
-"Ti invieremo un'e-mail al tuo attuale indirizzo e-mail \"%s\" per verificare "
-"la tua identità."
+"Ti invieremo un'e-mail al tuo attuale indirizzo e-mail \"%s\" per "
+"verificare la tua identità."
 
 #: src/app/main/ui/settings/change_email.cljs
 msgid "modals.change-email.new-email"
@@ -1630,7 +1654,8 @@ msgstr "Sì, cancellare il mio account"
 #: src/app/main/ui/settings/delete_account.cljs
 msgid "modals.delete-account.info"
 msgstr ""
-"Cancellando il tuo account, perderai tutti i tuoi archivi e progetti attuali."
+"Cancellando il tuo account, perderai tutti i tuoi archivi e progetti "
+"attuali."
 
 #: src/app/main/ui/settings/delete_account.cljs
 msgid "modals.delete-account.title"
@@ -1787,8 +1812,8 @@ msgstr "Invita membri al team"
 #: src/app/main/ui/dashboard/sidebar.cljs
 msgid "modals.leave-and-close-confirm.hint"
 msgstr ""
-"Poiché sei il solo membro di questo team, il team verrà eliminato insieme ai "
-"sui file e progetti."
+"Poiché sei il solo membro di questo team, il team verrà eliminato insieme "
+"ai sui file e progetti."
 
 #: src/app/main/ui/dashboard/sidebar.cljs
 msgid "modals.leave-and-close-confirm.message"
@@ -1934,8 +1959,8 @@ msgstr "Cancella"
 #: src/app/main/ui/workspace/context_menu.cljs
 msgid "modals.update-remote-component.hint"
 msgstr ""
-"Stai per aggiornare un componente in una libreria condivisa. Questo potrebbe "
-"causare modifiche nei file che la utilizzano."
+"Stai per aggiornare un componente in una libreria condivisa. Questo "
+"potrebbe causare modifiche nei file che la utilizzano."
 
 #: src/app/main/ui/workspace/sidebar/options/menus/component.cljs,
 #: src/app/main/ui/workspace/context_menu.cljs
@@ -1948,8 +1973,7 @@ msgstr "Invito inviato con successo"
 
 #: src/app/main/ui/settings/delete_account.cljs
 msgid "notifications.profile-deletion-not-allowed"
-msgstr ""
-"Non puoi eliminare il tuo profilo. Riassegna i tuoi team prima di procedere."
+msgstr "Non puoi eliminare il tuo profilo. Riassegna i tuoi team prima di procedere."
 
 #: src/app/main/ui/settings/profile.cljs, src/app/main/ui/settings/options.cljs
 msgid "notifications.profile-saved"
@@ -1989,8 +2013,8 @@ msgstr ""
 
 msgid "onboarding-v2.welcome.desc2"
 msgstr ""
-"Uno spazio pubblico dove imparare, condividere e discutere su Penpot, il suo "
-"presente e futuro con l'intera Comunità e con il team di Penpot."
+"Uno spazio pubblico dove imparare, condividere e discutere su Penpot, il "
+"suo presente e futuro con l'intera Comunità e con il team di Penpot."
 
 msgid "onboarding-v2.welcome.desc2.title"
 msgstr "Partecipando nella Comunità"
@@ -2013,8 +2037,7 @@ msgid "onboarding.choice.team-up.create-team"
 msgstr "Il nome del tuo team"
 
 msgid "onboarding.choice.team-up.create-team-desc"
-msgstr ""
-"Dopo aver nominato il tuo team, potrai invitare persone ad unirsi ad esso."
+msgstr "Dopo aver nominato il tuo team, potrai invitare persone ad unirsi ad esso."
 
 msgid "onboarding.choice.team-up.create-team-placeholder"
 msgstr "Inserisci il nome del team"
@@ -2115,30 +2138,3 @@ msgstr "Crea interazioni complete per imitare al meglio il prodotto finale."
 #: src/app/main/ui/dashboard/team.cljs
 msgid "title.team-invitations"
 msgstr "Inviti - %s - Penpot"
-
-#: src/app/main/ui/dashboard/sidebar.cljs
-msgid "dashboard.switch-team"
-msgstr "Cambia team"
-
-msgid "dashboard.export.options.detach.title"
-msgstr "Considera le risorse delle librerie condivise come oggetti di base"
-
-msgid "handoff.attributes.typography.text-transform.titlecase"
-msgstr "Prime lettere maiuscole"
-
-msgid "common.unpublish"
-msgstr "Spubblica"
-
-#: src/app/main/ui/dashboard/projects.cljs
-msgid "dasboard.team-hero.title"
-msgstr "Fai squadra!"
-
-#: src/app/main/ui/handoff/attributes/text.cljs
-msgid "handoff.attributes.typography.text-decoration"
-msgstr "Decorazioni testo"
-
-#: src/app/main/ui/export.cljs
-msgid "dashboard.export-shapes.how-to"
-msgstr ""
-"Puoi aggiungere dei parametri di esportazione agli elementi accedendo alle "
-"proprietà del design (in fondo alla barra laterale destra)."
