--- a/frontend/translations/tr.po
+++ b/frontend/translations/tr.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "PO-Revision-Date: 2022-10-10 17:34+0000\n"
 "Last-Translator: Oğuz Ersen <oguz@ersen.moe>\n"
-"Language-Team: Turkish <https://hosted.weblate.org/projects/penpot/frontend/"
-"tr/>\n"
+"Language-Team: Turkish "
+"<https://hosted.weblate.org/projects/penpot/frontend/tr/>\n"
 "Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -834,6 +834,9 @@ msgstr "Parolalar eşleşmedi"
 #: src/app/main/ui/settings/password.cljs
 msgid "errors.password-too-short"
 msgstr "Parola en az 8 karakterden oluşmalı"
+
+msgid "errors.profile-blocked"
+msgstr "Profil engellendi"
 
 #: src/app/main/ui/auth/recovery_request.cljs,
 #: src/app/main/ui/settings/change_email.cljs,
@@ -2032,6 +2035,28 @@ msgstr "Video öğreticiler"
 
 msgid "onboarding-v2.before-start.title"
 msgstr "Başlamadan önce"
+
+msgid "onboarding-v2.newsletter.desc"
+msgstr ""
+"Ürün geliştirme sürecinden ve haberlerden haberdar olmak için Penpot "
+"bültenine abone olun."
+
+msgid "onboarding-v2.newsletter.news"
+msgstr ""
+"Bana Penpot hakkında haberler gönder (blog gönderileri, video öğreticiler, "
+"yayınlar...)."
+
+msgid "onboarding-v2.newsletter.privacy1"
+msgstr "Gizliliğe önem veriyoruz, buradan okuyabilirsiniz. "
+
+msgid "onboarding-v2.newsletter.privacy2"
+msgstr ""
+"Size yalnızca ilgili e-postaları göndereceğiz. Bültenlerimizden herhangi "
+"birindeki abonelikten çıkma bağlantısını kullanarak istediğiniz zaman "
+"aboneliğinizi iptal edebilirsiniz."
+
+msgid "onboarding-v2.newsletter.updates"
+msgstr "Bana ürün güncellemeleri gönder (yeni özellikler, sürümler, düzeltmeler...)."
 
 msgid "onboarding-v2.welcome.desc1"
 msgstr ""
@@ -3417,9 +3442,7 @@ msgstr "Seçimi dışa aktar"
 #: src/app/main/ui/workspace/sidebar/options/menus/exports.cljs,
 #: src/app/main/ui/handoff/exports.cljs
 msgid "workspace.options.export-object"
-msgid_plural ""
-msgstr[0] "1 ögeyi dışa aktar"
-msgstr[1] "%s ögeyi dışa aktar"
+msgstr "1 ögeyi dışa aktar"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/exports.cljs
 msgid "workspace.options.export.suffix"
@@ -4508,6 +4531,10 @@ msgstr "Katman seç"
 msgid "workspace.shape.menu.show"
 msgstr "Göster"
 
+#: src/app/main/ui/workspace/sidebar/options/menus/component.cljs, src/app/main/ui/workspace/context_menu.cljs
+msgid "workspace.shape.menu.show-in-assets"
+msgstr "Varlıklar panelinde göster"
+
 #: src/app/main/ui/workspace/sidebar/options/menus/component.cljs,
 #: src/app/main/ui/workspace/context_menu.cljs
 msgid "workspace.shape.menu.show-main"
@@ -4548,6 +4575,12 @@ msgstr "Ana bileşenleri güncelle"
 #: src/app/main/ui/workspace/context_menu.cljs
 msgid "workspace.shape.menu.update-main"
 msgstr "Ana bileşeni güncelle"
+
+msgid "workspace.sidebar.collapse"
+msgstr "Kenar çubuğunu daralt"
+
+msgid "workspace.sidebar.expand"
+msgstr "Kenar çubuğunu genişlet"
 
 #: src/app/main/ui/workspace/left_toolbar.cljs
 msgid "workspace.sidebar.history"
@@ -4774,39 +4807,3 @@ msgstr "Güncelle"
 
 msgid "workspace.viewport.click-to-close-path"
 msgstr "Yolu kapatmak için tıklayın"
-
-#: src/app/main/ui/workspace/sidebar/options/menus/component.cljs, src/app/main/ui/workspace/context_menu.cljs
-msgid "workspace.shape.menu.show-in-assets"
-msgstr "Varlıklar panelinde göster"
-
-msgid "onboarding-v2.newsletter.privacy1"
-msgstr "Gizliliğe önem veriyoruz, buradan okuyabilirsiniz. "
-
-msgid "onboarding-v2.newsletter.privacy2"
-msgstr ""
-"Size yalnızca ilgili e-postaları göndereceğiz. Bültenlerimizden herhangi "
-"birindeki abonelikten çıkma bağlantısını kullanarak istediğiniz zaman "
-"aboneliğinizi iptal edebilirsiniz."
-
-msgid "onboarding-v2.newsletter.updates"
-msgstr ""
-"Bana ürün güncellemeleri gönder (yeni özellikler, sürümler, düzeltmeler...)."
-
-msgid "workspace.sidebar.collapse"
-msgstr "Kenar çubuğunu daralt"
-
-msgid "workspace.sidebar.expand"
-msgstr "Kenar çubuğunu genişlet"
-
-msgid "errors.profile-blocked"
-msgstr "Profil engellendi"
-
-msgid "onboarding-v2.newsletter.desc"
-msgstr ""
-"Ürün geliştirme sürecinden ve haberlerden haberdar olmak için Penpot "
-"bültenine abone olun."
-
-msgid "onboarding-v2.newsletter.news"
-msgstr ""
-"Bana Penpot hakkında haberler gönder (blog gönderileri, video öğreticiler, "
-"yayınlar...)."
